tests/ui/const-generics/generic_const_exprs/ice-predicates-of-no-entry-found-for-key-119275.stderr
error: `self` parameter is only allowed in associated functions
  --> $DIR/ice-predicates-of-no-entry-found-for-key-119275.rs:6:22
   |
LL | fn bug<const N: Nat>(&self)
   |                      ^^^^^ not semantically valid as function parameter
   |
   = note: associated functions are those in `impl` or `trait` definitions

error[E0403]: the name `N` is already used for a generic parameter in this item's generic parameters
  --> $DIR/ice-predicates-of-no-entry-found-for-key-119275.rs:10:15
   |
LL | fn bug<const N: Nat>(&self)
   |              - first use of `N`
...
LL |     for<const N: usize = 3, T = u32> [(); COT::BYTES]:,
   |               ^ already used

error[E0412]: cannot find type `Nat` in this scope
  --> $DIR/ice-predicates-of-no-entry-found-for-key-119275.rs:6:17
   |
LL | fn bug<const N: Nat>(&self)
   |                 ^^^ not found in this scope

error[E0658]: only lifetime parameters can be used in this context
  --> $DIR/ice-predicates-of-no-entry-found-for-key-119275.rs:10:15
   |
LL |     for<const N: usize = 3, T = u32> [(); COT::BYTES]:,
   |               ^             ^
   |
   = note: see issue #108185 <https://github.com/rust-lang/rust/issues/108185> for more information
   = help: add `#![feature(non_lifetime_binders)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: defaults for generic parameters are not allowed in `for<...>` binders
  --> $DIR/ice-predicates-of-no-entry-found-for-key-119275.rs:10:9
   |
LL |     for<const N: usize = 3, T = u32> [(); COT::BYTES]:,
   |         ^^^^^^^^^^^^^^^^^^

error: defaults for generic parameters are not allowed in `for<...>` binders
  --> $DIR/ice-predicates-of-no-entry-found-for-key-119275.rs:10:29
   |
LL |     for<const N: usize = 3, T = u32> [(); COT::BYTES]:,
   |                             ^^^^^^^

error[E0433]: failed to resolve: use of undeclared type `COT`
  --> $DIR/ice-predicates-of-no-entry-found-for-key-119275.rs:10:43
   |
LL |     for<const N: usize = 3, T = u32> [(); COT::BYTES]:,
   |                                           ^^^ use of undeclared type `COT`

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0403, E0412, E0433, E0658.
For more information about an error, try `rustc --explain E0403`.
